@@ -1,3 +1,7 @@
+2010-11-03  JF Argentino  <jf.argentino@osean.fr>
+
+	* src/arm_olpcx2294_flash.c: Add support for LPC-L2294-8M board.
+
 2008-11-22  Sergei Gavrikov <sergei.gavrikov@gmail.com>
 
 	* Flash driver v2 for LPC-E2294, LPC-H2294, LPC-L2294-1M boards
